@@ -1,5 +1,15 @@
 2014-06-19  Dan Bernstein  <mitz@apple.com>
 
+        Removed unused SPI -[WKWebView _runJavaScriptInMainFrame:].
+
+        Rubber-stamped by Simon Fraser.
+
+        * UIProcess/API/Cocoa/WKWebView.mm:
+        (-[WKWebView _runJavaScriptInMainFrame:]): Deleted.
+        * UIProcess/API/Cocoa/WKWebViewPrivate.h:
+
+2014-06-19  Dan Bernstein  <mitz@apple.com>
+
         Use a single map for all callback types in WebPageProxy
         https://bugs.webkit.org/show_bug.cgi?id=134069
 
